# didi-terminal

./: .prettierrc  AGENTS.md  GEMINI.md  README.md  calculator.html  delegate.cmd  delegate.ps1  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.didi/: delegate.ps1
.github/: copilot-instructions.md
plan/: AI_TERMINAL_ASSISTANT_PLAN.md  GHOSTTY_MIGRATION.md  MCP_SKILL.md  MOBILE_INTEGRATION.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/scripts/: templates.rs
src-tauri/src/services/: bus.rs  config.rs  dashboard.rs  db_client.rs  docker.rs  events.rs  fs.rs  git.rs  graph.rs  http.rs  job.rs  llm.rs  master_plan.rs  mod.rs  packages.rs  ports.rs  profile.rs  pty.rs  security.rs  sqlite.rs  vault.rs
src/components/: ApprovalModal.tsx  BrainstormModal.tsx  BrowserInstance.tsx  ErrorBoundary.tsx  MasterPlanPanel.tsx  NetworkGraph.tsx  SentinelPanel.tsx  SettingsModal.tsx  SnapshotPanel.tsx  TerminalInstance.tsx  TwoFactorModal.tsx  useGhosttyTerminal.ts  useTerminalInput.ts  useXTerm.ts
src/dashboard/: Dashboard.tsx  DashboardBridge.ts
src/features/: EditorShell.tsx  NonZenModePanels.tsx  NonZenModeShell.tsx  OrchestrationSidebarFeature.tsx  ZenModeView.tsx
src/lib/: merged-tabs.ts  use-flip-layout.ts  xterm-write-queue.ts
src/pages/: EditorModePage.tsx  OrchestrationModePage.tsx  TerminalModePage.tsx  ZenModePage.tsx
src/services/: agent-naming.ts  app-core.ts  db-service.ts  event-bus.ts  github-service.ts  handoff-queue-service.ts  handoff-service.ts  keybindings.ts  logger.ts  sentinel-service.ts  singletons.ts  standalone-agent.ts  terminal-lanes.ts  use-agent-ops.ts  use-app-controller.ts  use-app-effects.ts  use-workspace-crud.ts  (+6 more)
(+125 files in other folders)
