[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8.1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.38.4"
reqwest = { version = "0.13", features = ["json"] }
ignore = "0.4.25"
tauri-plugin-sql = { version = "2", features = ["sqlite", "mysql", "postgres"] }
url = "2"
window-vibrancy = "0.6.0"
axum = { version = "0.8.1", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
futures-util = "0.3"
local-ip-address = "0.6.3"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "mysql", "json"] }
uuid = { version = "1.23.1", features = ["v4"] }
windows = { version = "0.62.2", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }
zip = "8.6.0"


